--- a/themes/codebreu/css/sass/core/base.scss
+++ b/themes/codebreu/css/sass/core/base.scss
@@ -13,31 +13,36 @@
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
-
-    /* for ie6 and 7 */
-    *behavior: url(/assets/css/vendor/boxsizing.htc);
-
-    /* some defaults */
-    // background-repeat: no-repeat;
-    // vertical-align: middle;
 }
 
 ::-moz-selection{ background:#333; color:#F8F8F8; text-shadow:none; }
 ::selection { background:#333; color:#F8F8F8; text-shadow:none; }
 
 html, body { -web-font-smoothing: antialiased; }
+html { font-size: 62.5%; }
+
+body,
 html {
-    font-size: 62.5%;
+   width: 100%;
+   height: 100%;
 }
+
 body {
     width: 100%;
     height: 100%;
-    font-family: @ff-sans;
-    background-color: @c-bg;
-    color: @c-copy;
-    font-size: 1.4em; // 14 px
+    font-family: $ff-sans;
+    background-color: $c-bg;
+    color: $c-copy;
+    font-size: 1.6em;
     line-height: 1.5;
+
+    -webkit-font-smoothing: antialiased;
+    -moz-font-smoothing: antialiased;
+    -o-font-smoothing: antialiased;
+    font-smoothing: antialiased;
+    text-rendering: optimizeLegibility;
 }
+
 
 ::-webkit-input-placeholder {}
 :-moz-placeholder {}
@@ -48,7 +53,7 @@ body {
 }
 /* Style the webkit validation message for forms */
 ::-webkit-validation-bubble-message {
-padding: 40px;
+    padding: 40px;
 }
 
 a {}
