--- a/themes/codebreu/css/sass/style.scss
+++ b/themes/codebreu/css/sass/style.scss
@@ -1,48 +1,9 @@
 /* ====================================================
     IMPORTS
 ==================================================== */
-@import '../libs/reset';
-@import '../sass/base'; // mixins & colours
-
-body,
-html {
-   width: 100%;
-   height: 100%;
-}
-
-body {
-    -webkit-font-smoothing:antialiased;
-    -moz-font-smoothing:antialiased;
-    -o-font-smoothing:antialiased;
-    font-smoothing:antialiased;
-    text-rendering:optimizeLegibility;
-    background:$standardBackground;
-    color:$standardBody;
-    font-size:62.5%; /* set body to 1em === 10px; */
-    font-family: $primaryFont;
-}
-
-.site_head .active,
-.homepage .site_head .home a,
-.profile_page .site_head .profile a,
-.projects_page .site_head .work a { color: $darkAlt;}
-
-
-// Sitewide typography
-@import 'typography';
-
-// Base Layout
-@import 'base-layout';
-
-// Site header
-@import 'header';
-
-// Page specific
-@import 'homepage';
-@import 'profile';
-@import 'project-list';
-@import 'project-detail';
-
+@import "libs/reset";
+@import "core/vars";
+@import "core/base";
 
 /* ====================================================
     LAYOUT STYLES
@@ -50,6 +11,34 @@ body {
     Layout rules divide the page into sections.
     Layouts hold one or more modules together.
 ==================================================== */
+
+.wrapper {
+    min-height: 100%;
+    height: auto !important;
+    height: 100%;
+    margin: 0 auto -200px; /* the bottom margin is the negative value of the footer's height */
+
+    max-width: 1000px;
+    padding: 2% 3em;
+}
+.footer, .push {
+    height: 200px; /* .push must be the same height as .footer */
+}
+
+.footer {
+    background-color: #292929;
+    color: #f4d2a7;
+}
+.footer .inner {
+    max-width: 1000px;
+    margin: auto;
+    padding: 2em 2%;
+}
+.footer a {
+    color: #f4d2a7;
+    text-decoration: none;
+}
+
 
 
 
