--- a/themes/codebreu/css/sass/core/vars.scss
+++ b/themes/codebreu/css/sass/core/vars.scss
@@ -1,8 +1,11 @@
 /* ====================================================
-    LESS VARIABLES
+    VARIABLES
 ==================================================== */
+
 $c-bg: #f4d2a7;
 $c-copy: #462b2a;
+$c-primary: #8dd6cf;
+$c-secondary: #ef4f45;
 
 $c-selection-color: #f4d2a7;
 $c-selection-bg: #462b2a;
