--- a/themes/codebreu/css/sass/style.scss
+++ b/themes/codebreu/css/sass/style.scss
@@ -1,9 +1,14 @@
 /* ====================================================
     IMPORTS
 ==================================================== */
-@import "libs/reset";
+@import "libs/helpers";
+@import "libs/normalize";
 @import "core/vars";
 @import "core/base";
+@import "modules/modules";
+@import "modules/states";
+@import "modules/breakpoints";
+
 
 /* ====================================================
     LAYOUT STYLES
@@ -39,64 +44,6 @@
     text-decoration: none;
 }
 
-
-
-
-
-
-/* ====================================================
-    MODULES STYLES
-
-    Modules are the reusable, modular parts of our design.
-    They are the callouts, the sidebar sections, the product lists and so on.
-==================================================== */
-
-
-
-/* ====================================================
-    STATES STYLES
-
-    State rules are ways to describe how our modules or layouts will
-    look when in a particular state.
-    Is it hidden or expanded? Is it active or inactive?
-    They are about describing how a module or layout looks on screens that are smaller or bigger.
-    They are also about describing how a module might look in different
-    views like the home page or the inside page.
-==================================================== */
-
-
-
-
-/* ==|== Media Queries ======================================================
-    PLACEHOLDER Media Queries for Responsive Design.
-    Modify as content requires.
-
-    Notes:
-    MOBILE FIRST - use min-width (lowest first) and style upwards
-    MOBILE RESPONSIVE - use max-width (highest first) and style downwards
-
-    Never set breakpoints for devices, only when the design requires it.
-========================================================================== */
-
-
-
-
-/* ==|== print styles =======================================================
-    Print styles.
-    Inlined to avoid required HTTP connection: h5bp.com/r
-========================================================================== */
-
-@media print {
-    * { background: transparent !important; color: black !important; text-shadow: none !important; filter:none !important; -ms-filter: none !important; } /* Black prints faster: h5bp.com/s */
-    a, a:visited { text-decoration: underline; }
-    a[href]:after { content: " (" attr(href) ")"; }
-    abbr[title]:after { content: " (" attr(title) ")"; }
-    .ir a:after, a[href^="javascript:"]:after, a[href^="#"]:after { content: ""; }  /* Don't show links for images, or javascript/internal links */
-    pre, blockquote { border: 1px solid #999; page-break-inside: avoid; }
-    thead { display: table-header-group; } /* h5bp.com/t */
-    tr, img { page-break-inside: avoid; }
-    img { max-width: 100% !important; }
-    @page { margin: 0.5cm; }
-    p, h2, h3 { orphans: 3; widows: 3; }
-    h2, h3 { page-break-after: avoid; }
+.content {
+    margin: 4em auto;
 }
