--- a/themes/codebreu/css/sass/modules/modules.scss
+++ b/themes/codebreu/css/sass/modules/modules.scss
@@ -8,8 +8,8 @@
 .posts {
 
 }
-.post-list {
-
+.posts-list {
+	padding-left: 0;
 }
 
 .post {
@@ -18,7 +18,7 @@
 	}
 }
 .post-title {
-
+	margin-bottom: 0;
 }
 .post-meta {
 	font-size: 0.8em;
@@ -28,4 +28,10 @@
 }
 .post-date {
 
+}
+.post-title-link {
+	text-decoration: none;
+	&:hover {
+		color: $c-copy;
+	}
 }
