Updated base styles for citations and updated post

--- a/themes/codebreu/css/sass/core/base.scss
+++ b/themes/codebreu/css/sass/core/base.scss
@@ -111,4 +111,13 @@ blockquote {
     margin: 2em 1.8em;
     font-size: 1.2em;
     font-family: $ff-serif;
+
+    cite {
+        display: block;
+        text-align: left;
+
+        &:before {
+            content: "-- ";
+        }
+    }
 }
