--- a/themes/codebreu/css/sass/core/vars.scss
+++ b/themes/codebreu/css/sass/core/vars.scss
@@ -5,15 +5,17 @@
 // Colors
 // ===================
 $c-bg: #f4d2a7;
-$c-copy: #462b2a;
+$c-copy: #1b1b1b;
 $c-primary: #8dd6cf;
 $c-secondary: #ef4f45;
 $c-selection-color: #f4d2a7;
 $c-selection-bg: #462b2a;
+$c-dark: #2a2a2a;
 
 // Fonts
 // ===================
-$ff-sans: "Helvetica Neue", Helvetica, Arial, sans-serif;
+$ff-sans: Ubuntu, "Helvetica Neue", Helvetica, Arial, sans-serif;
+$ff-base: "Helvetica Neue", Helvetica, Arial, sans-serif;
 $ff-serif: "utopia-std", "Hoefler Text", Georgia, Times, serif;
 $ff-mono: Monaco, Menlo, Consolas, "Courier New", monospace;
 
