--- a/themes/codebreu/css/sass/modules/modules.scss
+++ b/themes/codebreu/css/sass/modules/modules.scss
@@ -10,6 +10,15 @@
 }
 .posts-list {
 	padding-left: 0;
+
+	li {
+		list-style: none;
+		display: block;
+		margin-bottom: 10px;
+		padding-left: 10px;
+		border-left: 5px solid $c-secondary;
+
+	}
 }
 
 .post {
