--- a/themes/codebreu/css/sass/style.scss
+++ b/themes/codebreu/css/sass/style.scss
@@ -1,10 +1,11 @@
 /* ====================================================
     IMPORTS
 ==================================================== */
-@import "libs/helpers";
+@import "libs/bourbon/bourbon";
 @import "libs/normalize";
 @import "core/vars";
 @import "core/base";
+@import "core/typography";
 @import "modules/modules";
 @import "modules/states";
 @import "modules/breakpoints";
@@ -25,13 +26,24 @@
 
     max-width: $w-wrapper-max;
     padding: 3em 4%;
+    max-width: 540px;
 }
-.footer, .push {
+
+#logo {
+    display: block;
+    margin: auto;
+    max-width: 154px;
+}
+
+
+.footer,
+.push {
+
     height: $h-footer; /* .push must be the same height as .footer */
 }
 
 .footer {
-    background-color: #292929;
+    background-color: $c-dark;
     color: #f4d2a7;
 
     a {
@@ -42,13 +54,21 @@
             color: $c-primary;
         }
     }
+
     .inner {
         max-width: $w-wrapper-max;
         margin: auto;
         padding: 2em 4%;
     }
+
 }
+
 .content {
+
     margin: 4em auto;
+
 }
-.dsq-brlink { display: none; }
+
+.dsq-brlink {
+    display: none;
+}
