--- a/themes/codebreu/css/sass/libs/bourbon/bourbon.scss
+++ b/themes/codebreu/css/sass/libs/bourbon/bourbon.scss
@@ -1,59 +1,59 @@
 // Custom Helpers
-@import "helpers/deprecated-webkit-gradient";
-@import "helpers/gradient-positions-parser";
-@import "helpers/linear-positions-parser";
-@import "helpers/radial-arg-parser";
-@import "helpers/radial-positions-parser";
-@import "helpers/render-gradients";
-@import "helpers/shape-size-stripper";
+//@import "helpers/deprecated-webkit-gradient";
+@import "helpers/_gradient-positions-parser";
+@import "helpers/_linear-positions-parser";
+@import "helpers/_radial-arg-parser";
+@import "helpers/_radial-positions-parser";
+@import "helpers/_render-gradients";
+@import "helpers/_shape-size-stripper";
 
-// Custom Functions
-@import "functions/compact";
-@import "functions/flex-grid";
-@import "functions/grid-width";
-@import "functions/linear-gradient";
-@import "functions/modular-scale";
-@import "functions/px-to-em";
-@import "functions/radial-gradient";
-@import "functions/tint-shade";
-@import "functions/transition-property-name";
+//_ Custom Functions
+//@import "functions/_compact";
+@import "functions/_flex-grid";
+@import "functions/_grid-width";
+@import "functions/_linear-gradient";
+@import "functions/_modular-scale";
+@import "functions/_px-to-em";
+@import "functions/_radial-gradient";
+@import "functions/_tint-shade";
+@import "functions/_transition-property-name";
 
-// CSS3 Mixins
-@import "css3/animation";
-@import "css3/appearance";
-@import "css3/backface-visibility";
-@import "css3/background";
-@import "css3/background-image";
-@import "css3/border-image";
-@import "css3/border-radius";
-@import "css3/box-sizing";
-@import "css3/columns";
-@import "css3/flex-box";
-@import "css3/font-face";
-@import "css3/hidpi-media-query";
-@import "css3/image-rendering";
-@import "css3/inline-block";
-@import "css3/keyframes";
-@import "css3/linear-gradient";
-@import "css3/perspective";
-@import "css3/radial-gradient";
-@import "css3/transform";
-@import "css3/transition";
-@import "css3/user-select";
-@import "css3/placeholder";
+//_ CSS3 Mixins
+@import "css3/_animation";
+@import "css3/_appearance";
+@import "css3/_backface-visibility";
+@import "css3/_background";
+@import "css3/_background-image";
+@import "css3/_border-image";
+@import "css3/_border-radius";
+@import "css3/_box-sizing";
+@import "css3/_columns";
+@import "css3/_flex-box";
+@import "css3/_font-face";
+@import "css3/_hidpi-media-query";
+@import "css3/_image-rendering";
+@import "css3/_inline-block";
+@import "css3/_keyframes";
+@import "css3/_linear-gradient";
+@import "css3/_perspective";
+@import "css3/_radial-gradient";
+@import "css3/_transform";
+@import "css3/_transition";
+@import "css3/_user-select";
+@import "css3/_placeholder";
 
-// Addons & other mixins
-@import "addons/button";
-@import "addons/clearfix";
-@import "addons/font-family";
-@import "addons/hide-text";
-@import "addons/html5-input-types";
-@import "addons/position";
-@import "addons/prefixer";
-@import "addons/retina-image";
-@import "addons/size";
-@import "addons/timing-functions";
-@import "addons/triangle";
+//_ Addons & other mixins
+@import "addons/_button";
+@import "addons/_clearfix";
+@import "addons/_font-family";
+@import "addons/_hide-text";
+@import "addons/_html5-input-types";
+@import "addons/_position";
+@import "addons/_prefixer";
+@import "addons/_retina-image";
+@import "addons/_size";
+@import "addons/_timing-functions";
+@import "addons/_triangle";
 
-// Soon to be deprecated Mixins
-@import "bourbon-deprecated-upcoming";
+//_ Soon to be deprecated Mixins
+@import "_bourbon-deprecated-upcoming";
