--- a/themes/codebreu/css/sass/style.scss
+++ b/themes/codebreu/css/sass/style.scss
@@ -6,69 +6,6 @@
 @import "core/vars";
 @import "core/base";
 @import "core/typography";
+@import "core/main-layout";
 @import "modules/modules";
 @import "modules/states";
-@import "modules/breakpoints";
-
-
-/* ====================================================
-    LAYOUT STYLES
-
-    Layout rules divide the page into sections.
-    Layouts hold one or more modules together.
-==================================================== */
-
-.wrapper {
-    min-height: 100%;
-    height: auto !important;
-    height: 100%;
-    margin: 0 auto (-$h-footer); /* the bottom margin is the negative value of the footer's height */
-
-    max-width: $w-wrapper-max;
-    padding: 3em 4%;
-    max-width: 540px;
-}
-
-#logo {
-    display: block;
-    margin: auto;
-    max-width: 154px;
-}
-
-
-.footer,
-.push {
-
-    height: $h-footer; /* .push must be the same height as .footer */
-}
-
-.footer {
-    background-color: $c-dark;
-    color: #f4d2a7;
-
-    a {
-        color: #f4d2a7;
-        text-decoration: none;
-        &:hover {
-            // text-decoration: underline;
-            color: $c-primary;
-        }
-    }
-
-    .inner {
-        max-width: $w-wrapper-max;
-        margin: auto;
-        padding: 2em 4%;
-    }
-
-}
-
-.content {
-
-    margin: 4em auto;
-
-}
-
-.dsq-brlink {
-    display: none;
-}
