Added 140 byte konami code and few tweaks

--- a/themes/codebreu/css/sass/core/vars.scss
+++ b/themes/codebreu/css/sass/core/vars.scss
@@ -5,7 +5,7 @@
 // Colors
 // ===================
 $c-bg: #f4d2a7;
-$c-copy: #1b1b1b;
+$c-copy: #262626;//#1b1b1b;
 $c-primary: #8dd6cf;
 $c-secondary: #ef4f45;
 $c-selection-color: #f4d2a7;
